<resources>
    <string name="app_name">ParcialDAM</string>
    <string name="parcial_integrador_dam">Parcial Integrador DAM</string>
    <string name="ingreso_de_datos">Ingreso de datos</string>
    <string name="google_maps_key">AIzaSyBzogyinE5z4a-1-CtopaESO0OsIF03oJw</string>
    <string name="ingresar_nombre_marcador_2">Ingresar nombre marcador 2</string>
    <string name="ingresar_nombre_marcador_1">Ingresar nombre marcador 1</string>
    <string name="habilitar_bot_n_mapa">Habilitar botón mapa</string>
    <string name="guardar_datos">GUARDAR DATOS</string>
    <string name="abrir_mapa">ABRIR MAPA</string>
</resources>