<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parcial_integrador_dam" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <EditText
            android:id="@+id/ingresarMarcador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingresar_nombre_marcador_1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ingresarMarcador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingresar_nombre_marcador_2"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <Switch
            android:id="@+id/switchMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habilitar_bot_n_mapa"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar_datos" />

            <Button
                android:id="@+id/buttonMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abrir_mapa" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>